--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "url": "https://github.com/nys-its/excelsior-web-framework.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-less": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.0"
+    "grunt": "0.4.1",
+    "grunt-contrib-jshint": "0.4.3",
+    "grunt-contrib-less": "0.5.0",
+    "grunt-contrib-watch": "0.3.1",
+    "grunt-contrib-uglify": "0.2.0"
   }
 }
