--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Excelsior Web Framework (EWF) is a way to fast-track your project's user interface development. EWF is a collaboratively built front-end framework that can enable NYS web projects to start on a solid mobile-first responsive foundation.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nys-its/excelsior-web-framework.git"
+    "url": "https://github.com/nys-its/excelsior.git"
   },
   "devDependencies": {
     "grunt": "0.4.1",
