name change to reflect git repo name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "excelsior-web-framework",
+  "name": "excelsior",
   "version": "0.1.0",
   "description": "The Excelsior Web Framework (EWF) is a way to fast-track your project's user interface development. EWF is a collaboratively built front-end framework that can enable NYS web projects to start on a solid mobile-first responsive foundation.",
   "repository": {
