--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-jshint": "0.4.3",
     "grunt-contrib-less": "0.5.0",
     "grunt-contrib-watch": "0.3.1",
-    "grunt-contrib-uglify": "0.2.0"
+    "grunt-contrib-uglify": "0.2.0",
+    "grunt-contrib-compass": "0.2.0"
   }
 }
