--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-contrib-jshint": "0.4.3",
-    "grunt-contrib-less": "0.5.0",
     "grunt-contrib-watch": "0.3.1",
     "grunt-contrib-uglify": "0.2.0",
     "grunt-contrib-compass": "0.2.0"
-  }
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/nys-its/excelsior/blob/master/license.md"
+    }
+  ]
 }
