--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "grunt-contrib-jshint": "0.4.3",
     "grunt-contrib-watch": "0.3.1",
     "grunt-contrib-uglify": "0.2.0",
-    "grunt-contrib-compass": "0.2.0"
+    "grunt-contrib-compass": "0.2.0",
+    "grunt-csscss": "0.4.0"
   },
   "licenses": [
     {
