--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-watch": "0.3.1",
     "grunt-contrib-uglify": "0.2.0",
     "grunt-contrib-compass": "0.2.0",
-    "grunt-csscss": "0.4.0"
+    "grunt-csscss": "0.4.0",
+    "grunt-wx-zipdir": "~0.3.1"
   },
   "licenses": [
     {
