--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,12 @@
+# This file is for unifying the coding style for different editors and IDEs
+# editorconfig.org
+
 root = true
 
-[*.html]
-indent_style = space
-indent_size = 4
-
-[*.js]
-indent_style = space
-indent_size = 4
-
-[*.css]
-indent_style = space
-indent_size = 4
-
-[*.less]
+[*]
+end_of_line = lf
+charset = UTF-8
+insert_final_newline = true
+trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
