--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-contrib-clean": "0.4.1",
     "grunt-csscss": "0.4.0",
     "grunt-contrib-concat": "0.3.0",
-    "grunt-css": "0.5.4"
+    "grunt-css": "0.5.4",
+    "grunt-contrib-rename": "0.0.2"
   },
   "license": {
     "type": "MIT",
