--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 [*]
 end_of_line = lf
 charset = UTF-8
-insert_final_newline = true
+insert_final_newline = false
 trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
