--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "grunt-contrib-compass": "0.2.0",
     "grunt-contrib-compress": "0.5.0",
     "grunt-contrib-clean": "0.4.1",
-    "grunt-csscss": "0.4.0",
     "grunt-contrib-concat": "0.3.0",
-    "grunt-css": "0.5.4",
+    "grunt-contrib-cssmin": "0.6.0",
     "grunt-contrib-rename": "0.0.2"
   },
   "license": {
