--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "grunt-contrib-compress": "0.5.0",
     "grunt-contrib-clean": "0.4.1",
     "grunt-contrib-concat": "0.3.0",
-    "grunt-contrib-cssmin": "0.6.0",
-    "grunt-contrib-rename": "0.0.2"
+    "grunt-contrib-cssmin": "0.6.0"
   },
   "license": {
     "type": "MIT",
