--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": {
     "type": "MIT",
     "url": "https://github.com/nys-its/excelsior/blob/master/license.md"
+  },
+  "scripts": {
+    "test": "grunt package"
   }
 }
