--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ env:
       AJAiEfkWrEX3dm1yyeRE5KSGh/WmGMZNOPlKqu/I+8aoBbLlPTnP0Oevyg7P
       QjiyCUrcScZeIJK4FCdIlbXr9jYDjXWjDlzCOQSmNMJug09LN0r5N96BTRLF
       pB3SvWOC74aK53nMevkEoi7faqnnL7ziJSLUZ9E55N2JxosOUpU=
-after_success: travis-build.sh
+after_success: sh travis-build.sh
