--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ env:
       pB3SvWOC74aK53nMevkEoi7faqnnL7ziJSLUZ9E55N2JxosOUpU=
 after_success:
   - chmod -R 777 .travis-build.sh
-  - ./travis-build.sh
+  - sh travis-build.sh
