Added grunt package command

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_script:
 - gem install breakpoint
 - gem install sass-media_query_combiner
 - npm install -g grunt-cli
+script:
+- grunt package
 env:
   global:
   - secure: |-
